--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "@typescript-eslint/typescript-estree": "^7.9.0",
+    "commander": "^12.1.0",
     "yaml": "^2.4.2"
   }
 }
