--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "node": ">=18"
   },
   "scripts": {
-    "build": "tsc",
+    "build": "rimraf dist && tsc",
     "lint": "eslint .",
     "format": "prettier . --write",
     "test": "mocha"
@@ -26,6 +26,7 @@
     "eslint": "^8.57.0",
     "mocha": "^10.4.0",
     "prettier": "^3.2.5",
+    "rimraf": "^6.0.1",
     "tsx": "^4.10.2",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.9.0"
