--- a/tsconfig.workflows.json
+++ b/tsconfig.workflows.json
@@ -5,7 +5,7 @@
     "moduleResolution": "bundler",
     "rootDir": ".",
     "paths": {
-      "workflowslib": ["./src/typeannotations/workflowslib"]
+      "workflowslib": ["./src/typeannotations/workflowslib.d.ts"]
     },
     "lib": ["ES5"],
     "noEmit": true,
