--- a/package.json
+++ b/package.json
@@ -36,12 +36,13 @@
     "prettier": "^3.2.5",
     "rimraf": "^6.0.1",
     "tsx": "^4.10.2",
-    "typescript": "^5.4.5",
     "typescript-eslint": "^8.0.0"
   },
   "dependencies": {
     "@typescript-eslint/typescript-estree": "^8.0.0",
+    "@typescript-eslint/utils": "^8.0.0",
     "commander": "^12.1.0",
+    "typescript": "^5.0.0",
     "yaml": "^2.4.2"
   }
 }
