--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier . --write",
     "test": "mocha"
   },
+  "bin": "./dist/cli.js",
   "files": [
     "dist",
     "README",
