--- a/samples/tsconfig.workflows.json
+++ b/samples/tsconfig.workflows.json
@@ -5,13 +5,12 @@
     "moduleResolution": "bundler",
     "rootDir": ".",
     "paths": {
-      "workflowslib": ["./src/typeannotations/workflowslib.d.ts"]
+      "workflowslib": ["../src/typeannotations/workflowslib.d.ts"]
     },
     "lib": ["ES5"],
     "noEmit": true,
     "strict": true,
     "types": [],
     "skipLibCheck": true
-  },
-  "include": ["samples"]
+  }
 }
