--- a/package.json
+++ b/package.json
@@ -31,6 +31,12 @@
   ],
   "author": "Antti Ajanki",
   "license": "MIT",
+  "keywords": [
+    "gcp",
+    "gcloud",
+    "workflows",
+    "transpiler"
+  ],
   "devDependencies": {
     "@eslint/js": "^9.10.0",
     "@types/chai": "^4.3.16",
