Include global.d.ts in the published package

--- a/package.json
+++ b/package.json
@@ -23,7 +23,15 @@
     "prepare": "husky"
   },
   "lint-staged": {
-    "*.ts": [
+    "src/**/*.ts": [
+      "prettier --write",
+      "eslint"
+    ],
+    "test/**/*.ts": [
+      "prettier --write",
+      "eslint"
+    ],
+    "scripts/**/*.ts": [
       "prettier --write",
       "eslint"
     ],
