--- a/tsconfig.workflows.json
+++ b/tsconfig.workflows.json
@@ -10,5 +10,6 @@
     "types": [],
     "typeRoots": ["./types"],
     "skipLibCheck": true
-  }
+  },
+  "include": ["samples/*.ts", "types/*.ts"]
 }
