Move the type checking of sample files to Github Actions

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,3 +21,5 @@ jobs:
       - run: npm ci
       - run: npm run lint
       - run: npm test
+      - name: Type check the sample source files
+        run: npx tsc --project samples/tsconfig.json
