--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/chai": "^5.0.1",
     "@types/mocha": "^10.0.6",
     "@types/node": "^18",
+    "@types/ramda": "^0.30.2",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "chai": "^5.1.1",
@@ -77,6 +78,7 @@
   "dependencies": {
     "@typescript-eslint/typescript-estree": "^8.0.0",
     "commander": "^13.1.0",
+    "ramda": "^0.30.1",
     "typescript": "^5.0.0",
     "yaml": "^2.4.2"
   }
