--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "mocha": "^11.1.0",
     "prettier": "^3.2.5",
     "rimraf": "^6.0.1",
-    "tsx": "^4.10.2",
+    "tsx": "~4.19.4",
     "typescript-eslint": "^8.0.0"
   },
   "dependencies": {
