--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lint": "eslint src test scripts",
     "format": "prettier . --write",
     "test": "mocha",
+    "test-coverage": "nyc mocha",
     "prepare": "husky && npm run build"
   },
   "lint-staged": {
@@ -70,6 +71,7 @@
     "husky": "^9.1.6",
     "lint-staged": "^16.1.2",
     "mocha": "^11.1.0",
+    "nyc": "^17.1.0",
     "prettier": "^3.2.5",
     "rimraf": "^6.0.1",
     "tsx": "~4.19.4",
