--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
   ],
   "devDependencies": {
     "@eslint/js": "^9.10.0",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@types/chai": "^5.0.1",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20",
@@ -74,6 +75,7 @@
     "nyc": "^17.1.0",
     "prettier": "^3.2.5",
     "rimraf": "^6.0.1",
+    "source-map-support": "^0.5.21",
     "tsx": "~4.19.4",
     "typescript-eslint": "^8.0.0"
   },
