--- a/package.json
+++ b/package.json
@@ -64,10 +64,10 @@
     "@types/chai": "^5.0.1",
     "@types/mocha": "^10.0.6",
     "@types/node": "^20",
-    "@types/ramda": "^0.30.2",
+    "@types/ramda": "^0.31.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
-    "chai": "^5.1.1",
+    "chai": "^6.0.1",
     "eslint": "^9.10.0",
     "husky": "^9.1.6",
     "lint-staged": "^16.1.2",
@@ -76,14 +76,14 @@
     "prettier": "^3.2.5",
     "rimraf": "^6.0.1",
     "source-map-support": "^0.5.21",
-    "tsx": "~4.19.4",
+    "tsx": "^4.20.5",
     "typescript-eslint": "^8.0.0"
   },
   "dependencies": {
     "@typescript-eslint/typescript-estree": "^8.0.0",
     "commander": "^14.0.0",
     "ramda": "^0.31.3",
-    "typescript": "^5.4.0",
+    "typescript": "^5.5.4",
     "yaml": "^2.4.2"
   }
 }
