--- a/package.json
+++ b/package.json
@@ -77,13 +77,16 @@
     "rimraf": "^6.0.1",
     "source-map-support": "^0.5.21",
     "tsx": "^4.20.5",
+    "typescript": "^5.5.4",
     "typescript-eslint": "^8.0.0"
+  },
+  "peerDependencies": {
+    "typescript": ">=5.5.4 <6.0.0"
   },
   "dependencies": {
     "@typescript-eslint/typescript-estree": "^8.0.0",
     "commander": "^14.0.0",
     "ramda": "^0.31.3",
-    "typescript": "^5.5.4",
     "yaml": "^2.4.2"
   }
 }
